jointquant/v2/joinquant_analysis.md
# JoinQuant 回测诊断与 v2 本地验证

## 聚宽导出诊断

- 区间：2018-01-02 ~ 2025-12-31
- 总收益：88.28%，年化：8.57%
- 原始日频夏普：0.58，最大回撤：32.70%
- 平均股票仓位：84.79%，平均现金：15.21%，最高现金：25.91%
- 交易日数：33，订单数：385，总手续费：2388.07
- 卖出胜率：61.78%，平均盈利：1148.60，平均亏损：-837.22
- 最大回撤段：2018-01-24 ~ 2018-10-18

## 主要问题

1. v1 不是本地 M14 策略的等价复刻，只用了 PE/PB/市值/短反转/Amihud，缺少现金流、成长和中性化。
2. 固定 6 只导致个股错误暴露过大，亏损集中在地产、光伏、银行等周期/困境价值票。
3. 6 万本金下平均现金约 11%，100 股整数手与高价股不可买造成长期现金拖累。
4. 60 日调仓可控，但行业不分散时容易连续押同一类 beta。

## 最差已实现盈亏

| code        |   sells |   realized_pnl |   pnl_rate |
|:------------|--------:|---------------:|-----------:|
| 000709.XSHE |       3 |       -2410.64 | -0.130305  |
| 600438.XSHG |       5 |       -1731    | -0.0544357 |
| 600000.XSHG |       4 |       -1187    | -0.0597323 |
| 002460.XSHE |       3 |       -1018    | -0.0730954 |
| 002129.XSHE |       3 |        -908    | -0.0509111 |
| 600025.XSHG |       1 |        -672    | -0.152589  |
| 600196.XSHG |       7 |        -528    | -0.0132623 |
| 000538.XSHE |       1 |        -492    | -0.100041  |

## 最好已实现盈亏

| code        |   sells |   realized_pnl |   pnl_rate |
|:------------|--------:|---------------:|-----------:|
| 600019.XSHG |       5 |       10028.1  |  0.25865   |
| 603259.XSHG |       3 |        5378.97 |  0.254529  |
| 601985.XSHG |       6 |        4776.6  |  0.180822  |
| 002459.XSHE |       3 |        4030    |  0.16962   |
| 600690.XSHG |       3 |        4023.9  |  0.199608  |
| 000876.XSHE |       8 |        3658.8  |  0.0875395 |
| 603799.XSHG |       1 |        3256.66 |  0.324821  |
| 600050.XSHG |       3 |        2732.24 |  0.106479  |

## v2 本地验证

| name                        | first_rebalance   |   total_return |   annualized_return |   sharpe |   max_drawdown |   avg_holdings |   avg_cash |   excess_sharpe |
|:----------------------------|:------------------|---------------:|--------------------:|---------:|---------------:|---------------:|-----------:|----------------:|
| v2_full_top10_40_ind1_first | True              |       2.82278  |           0.190067  | 1.01966  |       0.181479 |        9.69388 |   0.152313 |        0.304887 |
| v2_full_top12_40_ind1_first | True              |       2.63388  |           0.182267  | 0.994404 |       0.181442 |       11.6735  |   0.160168 |        0.279633 |
| v2_full_top8_40_ind1_first  | True              |       2.49202  |           0.176174  | 0.919005 |       0.227854 |        7.81633 |   0.139053 |        0.204234 |
| v2_full_top12_60_ind1_late  | False             |       2.28335  |           0.166807  | 0.905628 |       0.172849 |       12       |   0.152766 |        0.190856 |
| v2_full_top12_60_ind1_first | True              |       1.96747  |           0.151591  | 0.843081 |       0.187182 |       11.6061  |   0.162979 |        0.128309 |
| jq_v1_simple_like_late      | False             |       0.840077 |           0.0823456 | 0.45823  |       0.224424 |        6       |   0.122293 |       -0.256541 |

## 推荐版本

- `v2_full_top10_40_ind1_first`：top_n=10, rebalance=40, industry_cap=1
- 本地 100 股整数手验证：收益 282.28%，年化 19.01%，夏普 1.02，最大回撤 18.15%